package acb

import (
	"context"
	"fmt"
	"io"
	"time"

	"github.com/acb/internal/models"
)

// StreamBuilder builds a streaming context request
type StreamBuilder struct {
	client      *Client
	contextType string
	reader      io.Reader
	chunkSize   int
	onProgress  func(float64)
}

// StreamContext starts a streaming context upload
func (c *Client) StreamContext(ctx context.Context, contextType string) *StreamBuilder {
	return &StreamBuilder{
		client:      c,
		contextType: contextType,
		chunkSize:   1024 * 1024, // 1MB
	}
}

// FromReader sets the reader for streaming
func (sb *StreamBuilder) FromReader(reader io.Reader) *StreamBuilder {
	sb.reader = reader
	return sb
}

// WithChunkSize sets the chunk size
func (sb *StreamBuilder) WithChunkSize(size int) *StreamBuilder {
	sb.chunkSize = size
	return sb
}

// OnProgress sets the progress callback
func (sb *StreamBuilder) OnProgress(callback func(float64)) *StreamBuilder {
	sb.onProgress = callback
	return sb
}

// Send sends the stream
func (sb *StreamBuilder) Send() error {
	// TODO: Implement gRPC streaming
	return fmt.Errorf("streaming not fully implemented")
}

// ReceiveContextStream receives a streamed context
func (c *Client) ReceiveContextStream(ctx context.Context, contextID string) (io.Reader, error) {
	// TODO: Implement gRPC streaming
	return nil, fmt.Errorf("streaming not fully implemented")
}

// Request represents a request-reply pattern
type Request struct {
	client    *Client
	toAgentID string
	topic     string
	payload   interface{}
}

// Request sends a request message
func (c *Client) Request(ctx context.Context, toAgentID string, topic string, payload interface{}) *Request {
	return &Request{
		client:    c,
		toAgentID: toAgentID,
		topic:     topic,
		payload:   payload,
	}
}

// Wait waits for the response
func (r *Request) Wait() (*models.Message, error) {
	// TODO: Implement request-reply pattern
	return nil, fmt.Errorf("request-reply not fully implemented")
}

// Subscribe represents a subscription
type Subscribe struct {
	client *Client
	topic  string
}

// Subscribe subscribes to context updates
func (c *Client) Subscribe(topic string, handler func(context.Context, *models.Context) error) *Subscribe {
	// TODO: Implement subscription
	return &Subscribe{
		client: c,
		topic:  topic,
	}
}

// Unsubscribe unsubscribes from updates
func (s *Subscribe) Unsubscribe() error {
	// TODO: Implement unsubscribe
	return fmt.Errorf("unsubscribe not implemented")
}

// WithFilter sets a filter for subscription
func (s *Subscribe) WithFilter(key, value string) *Subscribe {
	// TODO: Implement filter
	return s
}

